<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ViewSong"
    android:padding="10dp">

    <TextView
        android:id="@+id/songTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25sp"
        android:textSize="30sp"
        android:textStyle="bold"
        android:text="@string/song_title" />

    <TextView
        android:id="@+id/songAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5sp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/songTitle"
        android:text="@string/song_author" />

    <TextView
        android:id="@+id/songLyricsAndChords"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/songAuthor"
        android:text="@string/lyrics_and_chords" />
</RelativeLayout>