<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".Activities.MainActivity"
    android:background="#302326">

    <ImageView
        android:id="@+id/additional_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@mipmap/background_addition" />

    <TextView
        android:id="@+id/we_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="2sp"
        android:fontFamily="@font/combo"
        android:text="@string/we_play"
        android:textColor="#FFFFFF"
        android:textSize="50sp" />

    <TextView
        android:id="@+id/worship_team_helper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/barlow_condensed_bold"
        android:text="@string/worship_team_helper"
        android:textAlignment="center"
        android:textSize="80sp"
        android:textStyle="bold"
        android:layout_below="@id/we_play"
        android:textColor="#DB7558"/>

    <TextView
        android:id="@+id/click_to_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/heebo_bold"
        android:text="@string/click_to_start"
        android:textColor="@color/white"
        android:layout_below="@id/worship_team_helper"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"/>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- Main content -->

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floating_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="16dp"
            app:fabSize="mini"
            app:fabCustomSize="@android:dimen/app_icon_size"
            android:backgroundTint="#DB7558"
            android:contentDescription="@string/add_song"
            app:srcCompat="@drawable/addition_sign"
            app:tint="#372025"
            app:rippleColor="#B4A592"/>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</RelativeLayout>