<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="10dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/songImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/songTxtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/songImage"
            android:layout_centerHorizontal="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/song_name"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/songAuthorName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/songTxtName"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/author_name"
            android:textStyle="bold" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>